<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/lite_blue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id = "@+id/heightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:textColor="@color/red"
         />
		
    <EditText 
         android:id="@+id/height"
         android:numeric="integer"
         android:textColor="@color/blue"
         android:layout_below="@id/heightText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="@string/height"
         
          />
    
     <TextView
        android:id = "@+id/weightText"
        android:layout_below="@id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textColor="@color/red"
         />
    <EditText 
         android:id="@+id/weight"
         android:numeric="integer"
         android:textColor="@color/blue"
         android:layout_below="@id/weightText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="@string/weight"
         
          />
    
     <TextView
        android:id = "@+id/genderText"
        android:layout_below="@id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textColor="@color/red"
         />
  <RadioGroup 
      android:id="@+id/rgroup"
        android:layout_below="@id/genderText"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    
      >
        <RadioButton
            
            android:id="@+id/male"
            android:gravity="center_horizontal"
            android:text="@string/male"
          
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ></RadioButton>
                  <RadioButton
            android:id="@+id/female"
            android:gravity="center_horizontal"
            android:text="@string/female"
      
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ></RadioButton>
         </RadioGroup>
     
         <Button 
             android:layout_below="@id/rgroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/submit"
             android:onClick="submitFunction"
             
             
             ></Button>
</RelativeLayout>